--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.bdbank"
+        applicationId "com.example.proyecto_moviles"
         minSdk 23
         targetSdk 32
         versionCode 1
