--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.ProyectoMoviles"
         tools:targetApi="31">
         <activity
+            android:name=".AddContactActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
+        <activity
             android:name=".UserContactActivity"
             android:exported="false" />
         <activity
